--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -115,6 +115,6 @@
 
 .nav-menu li a:hover,
 .nav-menu li a:focus{
-	color: gray;
+	color: #B30000;
 	transition: 0.25s;
 }
